fixed layout bugs

--- a/frontend/src/components/UserPanelComponents/ShippingSettingsComponent.module.scss
+++ b/frontend/src/components/UserPanelComponents/ShippingSettingsComponent.module.scss
@@ -62,7 +62,3 @@ input::-webkit-inner-spin-button {
 .btn:hover {
   color: red;
 }
-@media (width<700px) {
-  .form {
-  }
-}
